<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <!--<include layout="@layout/toolbar_item" />-->
    <include layout="@layout/toolbar_with_logo_item" />

    <include layout="@layout/item_heading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <include layout="@layout/item_table" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_last_known_location"
                android:layout_width="@dimen/unit_map_image_size"
                android:layout_height="@dimen/unit_map_image_size"
                android:src="@drawable/ic_green_map_car_pin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/edit_text_padding"
                android:text="@string/label_last_known_location"
                android:textColor="@color/black"
                android:textSize="@dimen/font_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/spacing_small"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_previous_locations"
                android:layout_width="@dimen/unit_map_image_size"
                android:layout_height="@dimen/unit_map_image_size"
                android:src="@drawable/ic_green_map_car_pin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/edit_text_padding"
                android:text="@string/label_previous_locations"
                android:textColor="@color/black"
                android:textSize="@dimen/font_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_bigger">

            <ImageView
                android:id="@+id/btn_activate_tracker"
                android:layout_width="@dimen/unit_image_size"
                android:layout_height="@dimen/unit_image_size"
                android:src="@drawable/ic_activate_tracker" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/edit_text_padding"
                android:text="@string/label_activate_secret_tracker"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/font_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/linearLayout2"
                    android:layout_below="@+id/linearLayout"
                    android:layout_marginStart="32dp"
                    android:gravity="center"
                    android:padding="1dp"
                    android:textStyle="bold"
                    android:text="@string/label_activate_secret_tracker_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_activate_secret_tracker_label2"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/edit_text_padding"
                    android:text="@string/label_activate_secret_tracker_session"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/unit_back_icon_size"
            android:layout_height="@dimen/unit_back_icon_size"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:src="@drawable/ic_action_back" />

        <!--<ImageView-->
            <!--android:id="@+id/proba"-->
            <!--android:layout_width="@dimen/logo_width"-->
            <!--android:layout_height="@dimen/logo_height"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:padding="5dp"-->
            <!--android:src="@drawable/logo" />-->
    </RelativeLayout>
</LinearLayout>