<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/heading_top_size"
    android:background="@color/white"
    android:orientation="horizontal">

    <!--<ImageView-->
        <!--android:id="@+id/heading_warning"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginEnd="1dp"-->
        <!--android:layout_marginRight="1dp"-->
        <!--android:layout_weigonet="1"-->
        <!--android:background="@drawable/heading_left_background"-->
        <!--android:src="@drawable/ic_forgotten_password" />-->

    <TextView
        android:id="@+id/heading_warning"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="0dp"
        android:layout_weight="2.3"
        android:background="@color/light_blue"
        android:text="@string/label_tamp"
        android:gravity="center"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:background="@drawable/heading_middle_background"
        android:gravity="center"
        android:text="@string/label_no"
        android:visibility="gone"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_unit_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="5"
        android:background="@color/light_blue"
        android:text="@string/label_unit_id"
        android:gravity="center"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_7"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="7"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="6"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="5"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="4"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="3"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="2"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/heading_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/text_black" />

    <!--<ImageView-->
        <!--android:id="@+id/heading_gsimbol"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginEnd="1dp"-->
        <!--android:layout_marginRight="1dp"-->
        <!--android:layout_weigonet="1"-->
        <!--android:background="@color/light_blue"-->
        <!--android:src="@drawable/ic_gsimbol" />-->
    <TextView
        android:id="@+id/heading_gsimbol"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="0dp"
        android:layout_weight="1.8"
        android:background="@color/light_blue"
        android:text="@string/label_geo"
        android:gravity="center"
        android:textColor="@color/text_black" />
    <!--<ImageView-->
        <!--android:id="@+id/heading_battery"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weigonet="1"-->
        <!--android:background="@color/light_blue"-->
        <!--android:src="@drawable/ic_battery" />-->
    <TextView
        android:id="@+id/bat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="0dp"
        android:layout_weight="2"
        android:background="@color/light_blue"
        android:text="@string/label_batt"
        android:gravity="center"
        android:textColor="@color/text_black" />

</LinearLayout>